# volt

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py  schemas.py  transforms.py
app/agents/: __init__.py  review_generator.py
app/services/: __init__.py  counterfactual_service.py  rating_service.py  recommendation_service.py
artifacts/: metrics_ranker.json  metrics_rating.json  ranker_feature_cols.pkl  ranker_model.pkl  rating_feature_cols.pkl  rating_low_classifier.pkl  rating_model.pkl  research_results.json  targeted_results.json
data/processed/: cleaning_report.json  feature_validation_report.json  model_sample_audit.csv  model_sample_summary.json  product_catalog.parquet  rating_features.parquet  rating_features_test.parquet  test.parquet  train.parquet
scripts/: 01_data_load_and_clean.py  02_feature_extraction.py  03_feature_engineering.py  04_train_rating_model.py  05_build_catalog.py  06_train_ranker.py  07_model_diagnostics.py  research_harness.py
tests/: test_api.py  test_services.py
